gccida/c0/recog_15
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_15/src/insn-recog.c:15571:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x1 = ( rtx)x0[1]; 
           ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_15/src/insn-recog.c:15579:12: error: invalid operands to binary expression ('struct rtx_def' and 'int')
if ( x1[1] == 50 ) 
     ~~~~~ ^  ~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_15/src/insn-recog.c:15584:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2p; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_15/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_15/src/insn-recog.c:15589:17: error: invalid operands to binary expression ('struct rtx_def' and 'int')
else if ( x1[1] == 53 ) 
          ~~~~~ ^  ~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_15/src/insn-recog.c:15594:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2q; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_15/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_15/src/insn-recog.c:15602:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = ( int)x1[1]; 
           ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_15/src/insn-recog.c:15609:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2r; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_15/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_15/src/insn-recog.c:15613:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x2u; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_15/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_15/src/insn-recog.c:15623:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2s; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_15/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_15/src/insn-recog.c:15627:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x2v; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_15/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_15/src/insn-recog.c:15637:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2t; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_15/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_15/src/insn-recog.c:15641:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x2w; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_15/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_15/src/insn-recog.c:15654:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_15/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_15/src/insn-recog.c:15655:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2e = (  struct rtx_def *)x1[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_15/src/insn-recog.c:15658:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x2e; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_15/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_15/src/insn-recog.c:15668:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2f; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_15/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_15/src/insn-recog.c:15669:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2g = (  struct rtx_def *)x1[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_15/src/insn-recog.c:15672:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x2g; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_15/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_15/src/insn-recog.c:15675:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x1 = ( rtx)x0[1]; 
           ^~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_15/src/obj/insn-recog.o] Error 1
